--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -48,6 +48,7 @@ section.curriculum .image-blurb {
   ol { margin-top: 25px; }
 }
 .hero {
+  width: 100%;
   background-size: 1500px;
   .hero-blurb { 
     max-width: 80em;
