--- a/stylesheets/nav_desktop.scss
+++ b/stylesheets/nav_desktop.scss
@@ -18,6 +18,7 @@
   position: fixed;
 }
 nav {
+  background-color: black;
   @include row();
   .nav-list { display: block; }
   button {visibility: hidden;}
