Makes John's content changes

--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -67,6 +67,7 @@ h1, h2 {
     margin-left: 40px;
     padding-bottom: 30px;
   }
+  ul p { padding-left: 20px; }
   p {
     text-align: center;
     font-weight: 100;
